# BESH-TRENDS

./: .gitignore  DAY_AHEAD_PRICING.csv  README.md  example.csv  pyproject.toml  requirements.txt  setup.py
.cursor/: settings.json
.dart/: pricing_audit.jsonl
.devcontainer/: devcontainer.json
dart/: __init__.py  __main__.py
dart/api/: __init__.py  comed_client.py
dart/config/: __init__.py  settings.py
dart/models/: __init__.py  pricing.py
dart/services/: __init__.py  pricing_calculations.py  pricing_service.py
dart/utils/: __init__.py  analytics.py  helpers.py  logger_util.py  pricing_audit_logger.py
dart/visualization/: __init__.py  app.py  charts.py  data_layer.py  formatting.py  ui_helpers.py
dart/visualization/sections/: __init__.py  custom_range.py  header.py  live_snapshot.py  recent_prices.py  sidebar.py
src/: __init__.py  __main__.py
src/api/: __init__.py  comed_client.py
src/config/: settings.py
src/models/: __init__.py  pricing.py
src/services/: __init__.py  pricing_service.py
src/utils/: analytics.py  helpers.py  logger_util.py  pricing_audit_logger.py  share_links.py
src/visualization/: app.py
tests/: __init__.py  conftest.py  test_analytics.py  test_comed_client.py  test_formatting.py  test_models.py  test_package_layout.py  test_pricing_audit_logger.py  test_pricing_calculations.py  test_pricing_service.py  test_share_links.py  test_ui_helpers.py
