[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dart-pricing-pipeline"
version = "2.1.0"
description = "ComEd pricing data acquisition and analysis pipeline"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.33",
    "pandas>=2.2",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["dart", "dart.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
